# KeenRobot

./: .gitignore  README.md  backend_main.py  celery_deploy.sh  gunicorn_config.py  pyproject.toml  requirements.txt
backend/: .env.example  .gitignore  README.md  backend_main.py  main.py  pyproject.toml  requirements.txt  依赖清单说明.txt
backend/applications/: __init__.py
backend/applications/agent/: dependencies.py
backend/applications/base/: dependencies.py
backend/applications/example/: dependencies.py
backend/applications/knowledge_base/: dependencies.py
backend/applications/mcp/: adapters.py  audit.py  callbacks.py  cancel_scope.py  client_factory.py  orchestrator.py  policies.py  session_manager.py
backend/applications/mcp_client/: adapters.py  callbacks.py  client_factory.py  policies.py  session_manager.py
backend/applications/task_center/: dependencies.py  (+1 more)
backend/celery_scheduler/: celery_base.py  celery_worker.py
backend/common/: __init__.py  async_or_sync_convert.py  file_utils.py  request_context.py  shell_utils.py
backend/configure/: __init__.py  celery_config.py  config.py  global_config.py  logging_config.py  project_config.py  rag_config.py  retrieval_presets.py  router_registry.py
backend/enums/: __init__.py  app_enum.py  base_error_enum.py  chat_session_enum.py  http_enum.py  menu_enum.py  task_center_enum.py
backend/output/: __init__.py
backend/services/: __init__.py  claude_agent_service.py  dependency.py  deps.py  file_transfer.py  password.py  rag_auth.py  rag_security.py  security.py
backend/static/: __init__.py
(+461 files in other folders)
