[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.8.1",
    "chromadb==1.5.9",
    "fastapi==0.115.6",
    "langchain==0.3.30",
    "langchain-community>=0.3.27",
    "onnxruntime==1.19.2",
    "passlib>=1.7.4",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.7.1",
    "pymupdf>=1.27.2.3",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.30",
    "sse-starlette>=3.0.3",
    "tortoise-orm>=1.1.7",
]
